--- a/Sinflex.Web/Views/_ViewImports.cshtml
+++ b/Sinflex.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,8 @@
 @using Sinflex.BLL.Repositories.ViewModels.MovieViewModels
 @using Sinflex.BLL.Repositories.ViewModels.BookingViewModels
 @using Sinflex.BLL.Repositories.ViewModels.AppUserViewModels
+@using Sinflex.BLL.Repositories.ViewModels.SeatingViewModels
+@using Sinflex.BLL.Repositories.ViewModels.TicketViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
