--- a/Sinflex.Web/Views/Home/Index.cshtml
+++ b/Sinflex.Web/Views/Home/Index.cshtml
@@ -1,160 +1,142 @@
 ﻿@model List<MovieListModel>
 
 @{
-	ViewData["Title"] = "Index";
-	Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <style type="text/css">
-	.spanStyle {
-		display: flex;
-		height: 30px;
-		float: left;
-		padding-right: 2%;
-	}
+    .spanStyle {
+        display: flex;
+        height: 30px;
+        float: left;
+        padding-right: 2%;
+    }
 
-	.marginStyle {
-		margin-right: 5px;
-		margin-top: 4px;
-	}
+    .marginStyle {
+        margin-right: 5px;
+        margin-top: 4px;
+    }
 </style>
 
 
 
 <div class="col-sm-12">
-	<form method="post">
-		<h2 class="page-heading">Movies</h2>
+    <form method="post">
+        <h2 class="page-heading">Movies</h2>
 
-		<div class="select-area" style="padding-bottom:18px">
-			<div>
-				<label for="SearchDate">Select Date:</label>
-				<input type="date" id="SearchDate" name="SearchDate" class="test login__input">
-				<button type="submit" class="btn btn-md btn--warning btn--wider" style="position:absolute;right:28px;" asp-controller="Home" asp-action="Index">Search</button>
-			</div>
-		</div>
+        <div class="select-area" style="padding-bottom:18px">
+            <div>
+                <label for="SearchDate">Select Date:</label>
+                <input type="date" id="SearchDate" name="SearchDate" class="test login__input">
+                <button type="submit" class="btn btn-md btn--warning btn--wider" style="position:absolute;right:28px;" asp-controller="Home" asp-action="Index">Search</button>
+            </div>
+        </div>
 
-		<div class="tags-area">
-			<div class="tags tags--unmarked">
-				<span class="tags__label">Sorted by:</span>
-				<ul>
-					<li class="item-wrap"><a href="#" class="tags__item item-active" data-filter="all">all</a></li>
-					<li class="item-wrap"><a href="#" class="tags__item" data-filter="release">release date</a></li>
-					<li class="item-wrap"><a href="#" class="tags__item" data-filter="popularity">popularity</a></li>
-					<li class="item-wrap"><a href="#" class="tags__item" data-filter="comments">comments</a></li>
-					<li class="item-wrap"><a href="#" class="tags__item" data-filter="ending">ending soon</a></li>
-				</ul>
-			</div>
-		</div>
-		@foreach (var movie in Model)
-		{
-			<div class="movie movie--preview movie--full">
-				<div class="col-sm-3 col-md-2 col-lg-2">
-					<div class="movie__images">
-						<img alt="" src="images/movie/movie-sample1.jpg">
-					</div>
-					<div class="movie__feature">
-						<a href="#" class="movie__feature-item movie__feature--comment">123</a>
-						<a href="#" class="movie__feature-item movie__feature--video">7</a>
-						<a href="#" class="movie__feature-item movie__feature--photo">352</a>
-					</div>
-				</div>
+        <div class="tags-area">
+            <div class="tags tags--unmarked">
+                <span class="tags__label">Sorted by:</span>
+                <ul>
+                    <input id="hdnReleaseDateClickInit" value="@ViewBag.ClickValue" type="hidden" />
+                    <input id="hdnNameClickInit" value="@ViewBag.ClickValue" type="hidden" />
+                    <li class="item-wrap"><a href="#" id="releaseDate" class="tags__item" data-filter="release">Release Date</a></li>
+                    <li class="item-wrap"><a href="#" id="name" class="tags__item" data-filter="name">Name</a></li>
 
-				<div class="col-sm-9 col-md-10 col-lg-10 movie__about">
-					<a href="movie-page-full.html" class="movie__title link--huge">@movie.Name</a>
-					@* <input type="hidden" name="movieId" value=@movie.Id /> *@
-					<p class="movie__time">@movie.Duration min</p>
-					<p class="movie__option"><strong>Genre: </strong><a href="#">@movie.Category</a></p>
-					<p class="movie__option"><strong>Release date: </strong>@movie.ReleaseDate.ToShortDateString()</p>
-					<p class="movie__option"><strong>Director: </strong><a href="#">@movie.Director</a></p>
-					<p class="movie__option">
-						<strong>Actors: </strong><a href="#">@movie.Actors</a>
-					</p>
-					<p class="movie__option"><strong>Age restriction: </strong><a href="#">@movie.AgeRestriction</a></p>
+                </ul>
+            </div>
+        </div>
+        @foreach (var movie in Model)
+        {
+            <div class="movie movie--preview movie--full">
+                <div class="col-sm-3 col-md-2 col-lg-2">
+                    <div class="movie__images">
+                        <img alt="" src="@movie.ImagePath">
+                    </div>
+                    <div class="movie__feature">
+                        <a href="#" class="movie__feature-item movie__feature--comment">123</a>
+                        <a href="#" class="movie__feature-item movie__feature--video">7</a>
+                        <a href="#" class="movie__feature-item movie__feature--photo">352</a>
+                    </div>
+                </div>
 
-					<div class="movie__btns">
-						
-						<button type="submit" class="btn btn-md btn--warning" asp-controller="Booking" asp-action="Index" asp-route-movieId="@movie.Id">Book a ticket for this movie</button>
-					</div>
+                <div class="col-sm-9 col-md-10 col-lg-10 movie__about">
+                    <a href="movie-page-full.html" class="movie__title link--huge">@movie.Name</a>
+                    <p class="movie__time">@movie.Duration min</p>
+                    <p class="movie__option"><strong>Genre: </strong><a href="#">@movie.Category</a></p>
+                    <p class="movie__option"><strong>Release date: </strong>@movie.ReleaseDate.ToShortDateString()</p>
+                    <p class="movie__option"><strong>Director: </strong><a href="#">@movie.Director</a></p>
+                    <p class="movie__option">
+                        <strong>Actors: </strong><a href="#">@movie.Actors</a>
+                    </p>
+                    <p class="movie__option"><strong>Age restriction: </strong><a href="#">@movie.AgeRestriction</a></p>
 
-					<div class="preview-footer">
-						<p class="movie__option" style="margin-bottom:-3px;"><strong>Air Dates: </strong></p>
-						<div class="movie__rate" style="display: flex; flex-wrap: wrap;">
-							@foreach (var airdates in movie.AirDates)
-							{
-								<span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">@airdates.ToShortDateString() </p></span>
-							}
-						</div>
-					</div>
-				</div>
+                    <div class="movie__btns">
 
-				<div class="clearfix"></div>
+                        <button type="submit" class="btn btn-md btn--warning" asp-controller="Booking" asp-action="Index" asp-route-movieId="@movie.Id">Book a ticket for this movie</button>
+                    </div>
 
-			</div>
-		}
-	</form>
+                    <div class="preview-footer">
+                        <p class="movie__option" style="margin-bottom:-3px;"><strong>Air Dates: </strong></p>
+                        <div class="movie__rate" style="display: flex; flex-wrap: wrap;">
+                            @foreach (var airdates in movie.AirDates)
+                            {
+                                <span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">@airdates.ToShortDateString() </p></span>
+                            }
+                        </div>
+                    </div>
+                </div>
 
-</div>
+                <div class="clearfix"></div>
 
-<script>
-	// Set the date picker to the current date
-	document.getElementById('SearchDate').value = new Date().toISOString().split('T')[0];
-</script>
-
-
-
-@* <!-- end movie preview item -->
-<div class="coloum-wrapper">
-	<div class="pagination paginatioon--full">
-		<a href="#" class="pagination__prev">prev</a>
-		<a href="#" class="pagination__next">next</a>
-	</div>
-</div>
+            </div>
+        }
+    </form>
 
 </div>
- *@
+@section Scripts
+{
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            document.getElementById('SearchDate').value = new Date().toISOString().split('T')[0];
+
+            $("#releaseDate").click(function () {
+
+                window.location.replace("?searchFilter=releaseDate&isSecondClick=" + $("#hdnReleaseDateClickInit").val());
+                ChangeReleaseDateClickInit();
 
 
-@* <div class="movie movie--preview movie--full release">
-	<div class="col-sm-3 col-md-2 col-lg-2">
-		<div class="movie__images">
-			<img alt="" src="images/movie/movie-sample1.jpg">
-		</div>
-		<div class="movie__feature">
-			<a href="#" class="movie__feature-item movie__feature--comment">123</a>
-			<a href="#" class="movie__feature-item movie__feature--video">7</a>
-			<a href="#" class="movie__feature-item movie__feature--photo">352</a>
-		</div>
-	</div>
+            });
 
-	<div class="col-sm-9 col-md-10 col-lg-10 movie__about">
-		<a href="movie-page-full.html" class="movie__title link--huge">Last Vegas (2013)</a>
+            $("#name").click(function () {
+                window.location.replace("?searchFilter=name&isSecondClick=" + $("#hdnNameClickInit").val());
+                ChangeNameClickInit();
+            });
 
-		<p class="movie__time">105 min</p>
+            function ChangeReleaseDateClickInit() {
+                var result = $("#hdnReleaseDateClickInit").val();
 
-		<p class="movie__option"><strong>Country: </strong><a href="#">USA</a></p>
-		<p class="movie__option"><strong>Category: </strong><a href="#">Comady</a></p>
-		<p class="movie__option"><strong>Release date: </strong>November 1, 2013</p>
-		<p class="movie__option"><strong>Director: </strong><a href="#">Jon Turteltaub</a></p>
-		<p class="movie__option"><strong>Actors: </strong><a href="#">Robert De Niro</a>, <a href="#">Michael Douglas</a>, <a href="#">Morgan Freeman</a>, <a href="#">Kevin Kline</a>, <a href="#">Mary Steenburgen</a>, <a href="#">Jerry Ferrara</a>, <a href="#">Romany Malco</a> <a href="#">...</a></p>
-		<p class="movie__option"><strong>Age restriction: </strong><a href="#">13</a></p>
+                if (result === "false")
+                    $("#hdnReleaseDateClickInit").val("true");
+                else
+                    $("#hdnReleaseDateClickInit").val("false");
+            };
 
-		<div class="movie__btns">
-			<a href="#" class="btn btn-md btn--warning">book a ticket <span class="hidden-sm">for this movie</span></a>
-		</div>
+            function ChangeNameClickInit() {
+                var result = $("#hdnNameClickInit").val();
 
-		<div class="preview-footer">
-			<p class="movie__option" style="margin-bottom:-3px;"><strong>Air Dates: </strong></p>
-			<div class="movie__rate" style="display: flex; flex-wrap: wrap;">
-				<span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">29 October 2013 </p></span>
-				<span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">29 October 2013 </p></span>
-				<span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">29 October 2013 </p></span>
-				<span class="datepicker__marker spanStyle"><i class="fa fa-calendar marginStyle"></i><p class="post__date">29 October 2013 </p></span>
-			</div>
+                if (result === "false")
+                    $("#hdnNameClickInit").val("true");
+                else
+                    $("#hdnNameClickInit").val("false");
+            };
+
+
+        });
 
 
 
-		</div>
-	</div>
-	<div class="clearfix"></div>
-</div>
-<!-- end time table--> *@
+    </script>
+
+}
+
