--- a/Sinflex.Web/Views/Booking/Index.cshtml
+++ b/Sinflex.Web/Views/Booking/Index.cshtml
@@ -24,7 +24,7 @@
 
     <h2 class="page-heading heading--outcontainer"> Chosen Movie</h2>
     <div class="col-sm-12 col-md-0">
-        <img src="~/images/movie/movie-sample1.jpg" style="object-fit: cover;width:250px; display: block; margin: auto;">
+        <img src="@Model.ImagePath" style="object-fit: cover;width:250px; display: block; margin: auto;">
         <p style="text-align: center;">@Model.Name</p>
     </div>
 
